# snc2fst

./: .gitignore  DESIGN_DOC.md  DIRECT_T_V_COMPILATION_DESIGN_DOC.md  DSL_SPEC.md  GUI.md  OUT_DSL_DESIGN_DOC.md  README.md  TODO.md  conda-environment.yml  conftest.py  environment.yml  pyproject.toml
conda/: meta.yaml
conda-recipe/: meta.yaml
docs/: cli.rst  conf.py  index.rst  tutorial.rst
sample/: input.toml  rules.toml
scripts/: build_conda_pkg.sh
src/snc2fst/: __init__.py  alphabet.py  ast.py  cli.py  cli_docs.py  compile_pynini_fst.py  compiler.py  dsl.py  dsl_ast.py  errors.py  evaluator.py  export.py  feature_analysis.py  gui.py  gui.tcss  io.py  main.py  models.py  nc.py  operations.py  out_dsl.py  project.py  rules.py  table.py  tuple_utils.py  tv_compiler.py  types.py
src/snc2fst/templates/: alphabet.csv  default_config.toml  tests.csv
src/snc2fst/templates/starters/english_past_tense/: alphabet.csv  config.toml  tests.csv
src/snc2fst/templates/starters/english_plural/: alphabet.csv  config.toml  tests.csv
src/snc2fst/templates/starters/georgian_laterals/: config.toml
src/snc2fst/templates/starters/iloko_plural/: alphabet.csv  config.toml  tests.csv
src/snc2fst/templates/starters/turkish_k_deletion/: alphabet.csv  config.toml  tests.csv
src/snc2fst/templates/starters/votic_vowel_harmony/: alphabet.csv  config.toml  tests.csv
src/snc2fst/web/: app.py
src/snc2fst/web/static/: app.css
src/snc2fst/web/static/mode/: csv.min.js
src/snc2fst/web/templates/: base.html  project.html  welcome.html
src/snc2fst/web/templates/partials/: compile_results.html  editor.html  eval_results.html  nc_result.html  new_project_error.html  status.html  tree.html
tests/: test_alphabet.py  test_cli.py  test_cli_compile.py  test_cli_eval.py  test_cli_init_export.py  test_cli_tool_nc.py  test_cli_validate.py  test_compile_cli.py  test_compile_starters.py  test_compiler.py  test_dsl.py  test_dsl_errors.py  test_dsl_parse.py  test_eval_cli.py  test_evaluator.py  test_export.py  test_feature_analysis.py  test_fst_utils.py  test_generate_cli.py  test_import_alphabet.py  test_import_table.py  test_large_random_backends.py  test_models.py  test_operations.py  test_out_dsl.py  test_pynini_compiler.py  test_smoke_cli.py  test_starters.py  test_tv_compiler.py  test_validate_rules.py
tests/fixtures/: no_features.csv  reserved_feature.csv  simple.csv  simple.tsv  unequal_rows.csv
