[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snc2fst"
version = "1.0.0"
description = "Compiles Search-and-Change grammars to OpenFST transducers."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pytest>=8.0.0",
]

[project.scripts]
snc2fst = "snc2fst.cli:main"
snc = "snc2fst.cli:main"

[tool.black]
line-length = 79

[tool.setuptools.package-data]
"snc2fst" = ["templates/*.toml", "templates/*.csv", "templates/*.tsv"]