[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snc2fst"
version = "2.0.1"
description = "Compiles Search-and-Change grammars to OpenFST transducers."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "questionary>=2.0.0",
    "langcodes[data]>=3.3.0",
    "prettytable>=3.0.0",
    "logical-phonology>=0.2.9",
    "pynini",  # install via conda: conda install conda-forge::pynini
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=8.0.0",
]

[project.scripts]
snc2fst = "snc2fst.cli:main"
snc = "snc2fst.cli:main"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.ruff.format]
quote-style = "double"

[tool.pyright] # pynini has incomplete type stubs, pyright complains otherwise.
reportMissingModuleSource = false
ignore = ["src/snc2fst/compiler.py"]

[tool.mypy] # pynini has incomplete type stubs, mypy complains otherwise.
[[tool.mypy.overrides]]
module = "snc2fst.compiler"
ignore_errors = true

[tool.setuptools.package-data]
"snc2fst" = [
    "templates/*.toml", "templates/*.csv", "templates/*.tsv",
    "templates/starters/**/*",
]
